--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 /* There are some serious issues with Moodle\'s way in compiling all-rtl.css file in which some rules are ignored.
 Ex. @container and clusterring. So, the workaround is to keep the code in the custom.css and import it here.
-Interestingly, doing it this way, the code is compiled correctly. Use this file for styles that need processing, e.g. pix .*/
+Interestingly, doing it this way, the code is compiled correctly. Use this file for styles that need processing, e.g. pix .
+Issue with doing it this way: Moodle is in subfolder ex. www.website.com/moodle */
 
-@import url('/mod/interactivevideo/libraries/custom.css');
+@import url("../mod/interactivevideo/libraries/custom-1.2.css"); /* Fallback for subfolder issue */
 
 .path-mod-interactivevideo iframe[name="h5player"],
 .path-mod-interactivevideo #iframe,
@@ -22,16 +23,30 @@ Interestingly, doing it this way, the code is compiled correctly. Use this file 
     background-image: url([[pix:mod_interactivevideo|checkbox-checked]]);
 }
 
-.path-mod-interactivevideo [type="checkbox"]:not(.custom-control-input):not(:checked):before {
+.path-mod-interactivevideo  [type="checkbox"]:not(.custom-control-input):not(:checked):before {
     background-image: url([[pix:mod_interactivevideo|checkbox-unchecked]]);
 }
 
-.path-mod-interactivevideo [type="radio"]:not(.custom-control-input):checked:before {
+.path-mod-interactivevideo  [type="radio"]:not(.custom-control-input):checked:before {
     background-image: url([[pix:mod_interactivevideo|radio-checked]]);
 }
 
-.path-mod-interactivevideo [type="radio"]:not(.custom-control-input):not(:checked):before {
+.path-mod-interactivevideo  [type="radio"]:not(.custom-control-input):not(:checked):before {
     background-image: url([[pix:mod_interactivevideo|radio-unchecked]]);
+}
+
+.path-mod-interactivevideo .form-check-input:checked[type="checkbox"],
+.path-mod-interactivevideo .form-check-input[type="checkbox"],
+.path-mod-interactivevideo .form-check-input:checked[type="radio"],
+.path-mod-interactivevideo .form-check-input[type="radio"] {
+    background: none;
+    border: 0;
+    border-radius: 0;
+}
+
+.path-mod-interactivevideo .modal-title,
+.path-course-view #playermodal .modal-title {
+    flex-grow: 1;
 }
 
 .path-admin-setting .ivname {
@@ -41,4 +56,8 @@ Interestingly, doing it this way, the code is compiled correctly. Use this file 
 
 .path-mod-interactivevideo #annotation-canvas.w-0 {
     width: 0;
+}
+
+.path-mod-interactivevideo .table > :not(caption) > * > * {
+    background-color: transparent;
 }
