--- a/templates/addcontenttype.mustache
+++ b/templates/addcontenttype.mustache
@@ -25,11 +25,11 @@
 }}
 <div class="modal fade" id="contentmodal" role="dialog" aria-labelledby="contentmodal" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable" role="document">
-        <div class="modal-content rounded-lg">
+        <div class="modal-content iv-rounded-lg">
             <div class="modal-header align-items-center flex-column">
             <div class="w-100 d-flex align-items-center justify-content-between">
                 <h5 class="modal-title">{{#str}}selectacontenttypetoadd, mod_interactivevideo{{/str}}</h5>
-                <button type="button" class="btn p-0 border-0" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="btn p-0 border-0" data{{bs}}-dismiss="modal" aria-label="Close">
                    <i class="bi bi-x-lg fa-fw fs-25px"></i>
                 </button>
                 </div>
@@ -42,24 +42,24 @@
                 {{^hideonchooser}}
                     <span class="cursor-pointer dropdown-item text-wrap px-4 py-3 border-bottom d-flex w-100 {{^description}}align-items-center{{/description}} {{^description}}align-items-start{{/description}}"
                         data-type="{{{name}}}">
-                        <i class="mr-3 {{{icon}}} {{^hascompletion}}text-secondary{{/hascompletion}}"></i>
+                        <i class="iv-mr-3 {{{icon}}} {{^hascompletion}}text-secondary{{/hascompletion}}"></i>
                         <div class="w-100">
-                            <span class="font-weight-bold contenttype-title">{{{title}}}</span>
+                            <span class="iv-font-weight-bold contenttype-title">{{{title}}}</span>
                             {{#author}}
                             <small class="text-muted d-flex mt-1 mb-2 w-100 justify-content-between">
                             <span class="d-flex">
-                            {{#str}}byauthor, interactivevideo, {{#authorlink}}<a class="text-muted font-weight-bold ml-1" href="{{{authorlink}}}" target="_blank">{{author}}</a>{{/authorlink}}
-                            {{^authorlink}}<b class="ml-1">{{author}}</b>{{/authorlink}}{{/str}}
+                            {{#str}}byauthor, interactivevideo, {{#authorlink}}<a class="text-muted iv-font-weight-bold iv-ml-1" href="{{{authorlink}}}" target="_blank">{{author}}</a>{{/authorlink}}
+                            {{^authorlink}}<b class="iv-ml-1">{{author}}</b>{{/authorlink}}{{/str}}
                             </span>
                             {{#tutorial}}
                             <span>
-                            <a class="text-muted font-weight-bold text-right" href="{{{tutorial}}}" target="_blank"><i class="bi bi-youtube tutorial" title="{{#str}}tutorial, interactivevideo{{/str}}"></i></a>
+                            <a class="text-muted iv-font-weight-bold text-{{#bs}}end{{/bs}}{{^bs}}right{{/bs}}" href="{{{tutorial}}}" target="_blank"><i class="bi bi-youtube tutorial" title="{{#str}}tutorial, interactivevideo{{/str}}"></i></a>
                             </span>
                             {{/tutorial}}
                             </small>
                             {{/author}}
                             {{#description}}
-                            <p class="font-weight-light mb-0">{{{description}}}</p>
+                            <p class="iv-font-weight-light mb-0">{{{description}}}</p>
                             {{/description}}
 
                         </div>
