--- a/templates/fullscreenmodal.mustache
+++ b/templates/fullscreenmodal.mustache
@@ -36,6 +36,7 @@ Example context (json):
                 <button type="button"
                         class="btn btn-close"
                         data-dismiss="modal"
+                        data-bs-dismiss="modal"
                         aria-label="{{#cleanstr}}closebuttontitle{{/cleanstr}}">
                     <i class="fa fa-times"></i>
                 </button>
