--- a/templates/pagenav.mustache
+++ b/templates/pagenav.mustache
@@ -18,12 +18,13 @@ Example context (json):
 {
 }
 }}
-<div class="navbar fixed-top d-flex flex-row flex-nowrap align-items-center {{^darkmode}}bg-white{{/darkmode}} pl-1 rounded-0 {{#darkmode}}bg-dark text-white border-0{{/darkmode}}" data-completion="{{completed}}">
+<div class="navbar fixed-top d-flex flex-row flex-nowrap align-items-center {{^darkmode}}bg-white{{/darkmode}} iv-pl-1 iv-rounded-0 {{#darkmode}}bg-dark text-white border-0{{/darkmode}}" data-completion="{{completed}}">
     <div class="d-flex align-items-center">
         <a href="{{{returnurl}}}#module-{{cmid}}"
-           class="rotatex-360 btn btn-sm mr-2 border-0 p-0 ml-2"
+           class="rotatex-360 btn btn-sm iv-mr-2 border-0 p-0 iv-ml-2"
            title="{{#str}}backtocourse,mod_interactivevideo{{/str}}"
-           data-toggle="tooltip">
+           data{{bs}}-placement="bottom"
+           data{{bs}}-toggle="tooltip">
             <i class="{{#darkmode}}text-white{{/darkmode}} bi bi-chevron-left fs-25px"></i>
         </a>
         {{#manualcompletion}}
@@ -33,11 +34,11 @@ Example context (json):
     {{#completion}}
     <div class="dropdown"
          title="{{#str}}todo,mod_interactivevideo{{/str}}"
-         data-toggle="tooltip" data-placement="right">
+         data{{bs}}-toggle="tooltip" data{{bs}}-placement="right">
         <button class="btn btn-sm border-0 bg-transparent btn-hover"
                 type="button"
                 id="completiondropdown"
-                data-toggle="dropdown"
+                data{{bs}}-toggle="dropdown"
                 aria-haspopup="true"
                 aria-expanded="false">
             <i class="fs-25px bi bi-check-circle{{#completed}}-fill{{/completed}} {{#darkmode}}{{^completed}}text-white{{/completed}}{{/darkmode}} {{#completedpass}}text-success{{/completedpass}}{{#completedfail}}text-danger{{/completedfail}}"></i>
@@ -47,47 +48,47 @@ Example context (json):
     </div>
 {{/completion}}
 {{/manualcompletion}}
-<div class="metadata d-none d-md-block ml-3 {{#darkmode}}text-white{{/darkmode}}"></div>
+<div class="metadata d-none d-md-block iv-ml-3 {{#darkmode}}text-white{{/darkmode}}"></div>
 </div>
 <div class="navigation d-flex align-items-center">
     {{#viewurl}}
     <a href="{{{viewurl}}}"
        title="{{#str}}play,mod_interactivevideo{{/str}}"
-       data-toggle="tooltip"
-       class="btn px-1 btn-sm mr-2 border-0 btn-hover"><i class="bi bi-play-circle fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
+       data{{bs}}-toggle="tooltip" data{{bs}}-placement="bottom"
+       class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover"><i class="bi bi-play-circle fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
 {{/viewurl}}
 {{#interactionsurl}}
 <a href="{{{interactionsurl}}}"
    title="{{#str}}interactions,mod_interactivevideo{{/str}}"
-   data-toggle="tooltip"
-   class="btn px-1 btn-sm mr-2 border-0 btn-hover"><i class="bi bi-bullseye fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
+   data{{bs}}-toggle="tooltip" data{{bs}}-placement="bottom"
+   class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover"><i class="bi bi-bullseye fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
 {{/interactionsurl}}
 {{#reporturl}}
 <a href="{{{reporturl}}}"
    title="{{#str}}report,mod_interactivevideo{{/str}}"
-   data-toggle="tooltip"
-   class="btn px-1 btn-sm mr-2 border-0 btn-hover"><i class="bi bi-table fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
+   data{{bs}}-toggle="tooltip" data{{bs}}-placement="bottom"
+   class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover"><i class="bi bi-table fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
 {{/reporturl}}
 {{#settingurl}}
 <a href="javascript:void(0)" data-href="{{{settingurl}}}" data-cmid="{{cmid}}" data-courseid="{{courseid}}"
     data-contextid="{{contextid}}" data-interaction="{{instance}}" data-origin="navbar"
    title="{{#str}}settingstooltip, mod_interactivevideo{{/str}}"
-   data-toggle="tooltip" data-html="true"
-   class="btn px-1 btn-sm mr-2 border-0 iv_quickform btn-hover"><i class="bi bi-gear fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
+   data{{bs}}-toggle="tooltip" data{{bs}}-html="true" data{{bs}}-placement="bottom"
+   class="btn px-1 btn-sm iv-mr-2 border-0 iv_quickform btn-hover"><i class="bi bi-gear fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
 {{/settingurl}}
 {{#backupurl}}
 <a href="{{{backupurl}}}"
    title="{{#str}}backup{{/str}}"
-   data-toggle="tooltip"
-   class="btn px-1 btn-sm mr-2 border-0 btn-hover"><i class="bi bi-cloud-arrow-up fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
+   data{{bs}}-toggle="tooltip" data{{bs}}-placement="bottom"
+   class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover"><i class="bi bi-cloud-arrow-up fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
 {{/backupurl}}
 {{#restoreurl}}
 <a href="{{{restoreurl}}}"
    title="{{#str}}restore{{/str}}"
-   data-toggle="tooltip"
-   class="btn px-1 btn-sm mr-2 border-0 btn-hover"><i class="bi bi-cloud-arrow-down fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
+   data{{bs}}-toggle="tooltip" data{{bs}}-placement="bottom"
+   class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover"><i class="bi bi-cloud-arrow-down fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
 {{/restoreurl}}
-<span class="ml-2">
+<span class="iv-mr-3">
     {{#useravatar}}
     {{> core/user_menu }}
 {{/useravatar}}
