--- a/templates/player.mustache
+++ b/templates/player.mustache
@@ -42,11 +42,11 @@ Example context (json):
                         </div>
                     </div>
                     {{#displayoptions.hidemainvideocontrols}}
-                    <span class="rotatex-360 btn border-0 btn-sm btn-control rounded-circle p-1"
+                    <span class="rotatex-360 btn border-0 btn-sm btn-control iv-rounded-circle p-1"
                           id="fullscreen"
-                          data-toggle="tooltip"
-                          data-trigger="hover"
-                          title="{{#str}}togglefullscreen,mod_interactivevideo{{/str}}"><i class="bi bi-fullscreen"></i></span>
+                          data{{bs}}-toggle="tooltip" data{{bs}}-container="#wrapper"
+                          data{{bs}}-trigger="hover"
+                          data{{bs}}-title="{{#str}}togglefullscreen,mod_interactivevideo{{/str}}"><i class="bi bi-fullscreen"></i></span>
                 {{/displayoptions.hidemainvideocontrols}}
                 {{^displayoptions.disablechapternavigation}}
                 <div id="chapter-container-left"
@@ -55,13 +55,13 @@ Example context (json):
                          class="d-flex w-100 position-absolute h-100 flex-column shadow">
                         <div class="w-100 p-3 d-flex flex-column">
                             <button id="closechapter"
-                                    class="btn btn-small rounded-circle p-0 bg-secondary border-0">
+                                    class="btn btn-small iv-rounded-circle p-0 bg-secondary border-0">
                                 <i class="fa fa-times"></i>
                             </button>
                             <div class="metadata"></div>
                             <span class="h4 mt-2 mb-0 text-truncate">{{{title}}}</span>
                         </div>
-                        <ul data-region="chapterlists" class="list-group w-100 rounded-0 m-0">
+                        <ul data-region="chapterlists" class="list-group w-100 iv-rounded-0 m-0">
                         </ul>
                     </div>
                 </div>
@@ -87,7 +87,7 @@ Example context (json):
                         <span class="sr-only">Loading...</span>
                     </div>
                     <button id="play"
-                            class="btn btn-flex rounded-circle d-none pulse bg-white position-sticky">
+                            class="btn btn-flex iv-rounded-circle d-none pulse bg-white position-sticky">
                         <i class="bi bi-play-circle-fill text-danger"></i>
                     </button>
                 </div>
@@ -104,7 +104,7 @@ Example context (json):
          class="p-1 p-sm-3 text-white w-100 h-100 position-absolute align-items-start flex-column justify-content-between d-none d-flex">
         <div class="justify-content-between w-100 h-100 d-flex flex-column">
             <div class="metadata d-block d-md-none"></div>
-            <span class="h1 text-white font-weight-bold line-height-100 m-1 m-sm-2 p-sm-2 p-1">{{{title}}}</span>
+            <span class="h1 text-white iv-font-weight-bold line-height-100 m-1 m-sm-2 p-sm-2 p-1">{{{title}}}</span>
         </div>
         <div id="spinner"
              class="spinner-border text-danger position-absolute"
@@ -115,7 +115,7 @@ Example context (json):
                     top: calc(50% - 1.5rem)">
             <span class="sr-only">Loading...</span>
         </div>
-        <button class="btn btn-flex  bg-white rounded-circle d-none position-absolute pulse"
+        <button class="btn btn-flex  bg-white iv-rounded-circle d-none position-absolute pulse"
                 id="play">
             <i class="bi bi-play-circle-fill text-danger"></i>
         </button>
@@ -132,14 +132,14 @@ Example context (json):
                 <div class="metadata d-block d-md-none"></div>
                 <span class="h1 line-height-100 mb-0 title">{{{title}}}</span>
             </div>
-            <button class="btn btn-flex btn-danger rounded-circle pulse position-sticky"
+            <button class="btn btn-flex btn-danger iv-rounded-circle pulse position-sticky"
                     id="restart">
                 <i class="bi bi-arrow-repeat"></i>
             </button>
         </div>
         <div class="p-2 p-md-3">{{{endscreentext}}}</div>
     {{/hasendscreentext}} {{^hasendscreentext}}
-    <button class="btn btn-flex btn-danger rounded-circle pulse" id="restart">
+    <button class="btn btn-flex btn-danger iv-rounded-circle pulse" id="restart">
         <i class="bi bi-arrow-repeat"></i>
     </button>
 {{/hasendscreentext}}
@@ -171,27 +171,27 @@ Example context (json):
             </ul>
             <div class="w-100 d-flex align-items-center" dir="ltr">
                 <div id="progress" class="bg-danger"></div>
-                <div id="seek" class="w-100 position-absolute rounded"></div>
-                <div id="seekhead" class="position-absolute rounded-circle bg-danger"></div>
+                <div id="seek" class="w-100 position-absolute iv-rounded"></div>
+                <div id="seekhead" class="position-absolute iv-rounded-circle bg-danger"></div>
             </div>
         </div>
     </div>
     <div class="w-100 px-2 d-flex align-items-center justify-content-between pb-2"
          style="height: 30px">
         <div class="d-flex align-items-center">
-            <span data-toggle="tooltip"
-                  data-trigger="hover"
+            <span data{{bs}}-toggle="tooltip" data{{bs}}-container="#wrapper"
+                  data{{bs}}-trigger="hover"
                   role="button"
-                  title="{{#str}}play, mod_interactivevideo{{/str}}"
+                  data{{bs}}-title="{{#str}}play, mod_interactivevideo{{/str}}"
                   id="playpause"
                   class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-0">
                 <i class="bi bi-play-fill fs-25px"></i>
             </span>
             {{^displayoptions.disablechapternavigation}}
             <div id="chaptertoggle" class="mx-1">
-                <span data-toggle="tooltip"
-                      data-trigger="focus"
-                      title="{{#str}}togglechapter, mod_interactivevideo{{/str}}"
+                <span data{{bs}}-toggle="tooltip" data{{bs}}-container="#wrapper"
+                      data{{bs}}-trigger="hover"
+                      data{{bs}}-title="{{#str}}togglechapter, mod_interactivevideo{{/str}}"
                       class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-1"
                       id="chapterbutton"><i class="bi bi-collection"></i></span>
             </div>
@@ -204,27 +204,27 @@ Example context (json):
     <div class="d-flex align-items-center">
         <span id="mute"
               class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-1 mx-1"
-              data-toggle="tooltip"
-              data-trigger="focus"
-              title="{{#str}}mute,mod_interactivevideo{{/str}}"><i class="bi bi-volume-up"></i></span>
+              data{{bs}}-toggle="tooltip" data{{bs}}-container="#wrapper"
+              data{{bs}}-trigger="hover"
+              data{{bs}}-title="{{#str}}mute,mod_interactivevideo{{/str}}"><i class="bi bi-volume-up"></i></span>
         {{> mod_interactivevideo/captionmenu }}
         {{> mod_interactivevideo/speedmenu }}
         {{> mod_interactivevideo/qualitymenu }}
         <span class="btn border-0 btn-sm btn-control text-white py-0 px-1 mx-1"
               id="share"
-              data-toggle="tooltip"
-              data-trigger="focus"
-              title="{{#str}}sharethismoment,mod_interactivevideo{{/str}}"><i class="bi bi-share"></i></span>
+              data{{bs}}-toggle="tooltip" data{{bs}}-container="#wrapper"
+              data{{bs}}-trigger="hover"
+              data{{bs}}-title="{{#str}}sharethismoment,mod_interactivevideo{{/str}}"><i class="bi bi-share"></i></span>
         <span class="btn border-0 btn-sm btn-control text-white py-0 px-1 mx-1 rotate d-none"
               id="expand"
-              data-toggle="tooltip"
-              data-trigger="focus"
-              title="{{#str}}resize,mod_interactivevideo{{/str}}"><i class="bi bi-file"></i></span>
+              data{{bs}}-toggle="tooltip" data{{bs}}-container="#wrapper"
+              data{{bs}}-trigger="hover"
+              data{{bs}}-title="{{#str}}resize,mod_interactivevideo{{/str}}"><i class="bi bi-file"></i></span>
         <span class="btn border-0 btn-sm btn-control text-white py-0 px-1 mx-1"
               id="fullscreen"
-              data-toggle="tooltip"
-              data-trigger="focus"
-              title="{{#str}}togglefullscreen,mod_interactivevideo{{/str}}"><i class="bi bi-fullscreen"></i></span>
+              data{{bs}}-toggle="tooltip" data{{bs}}-container="#wrapper"
+              data{{bs}}-trigger="hover"
+              data{{bs}}-title="{{#str}}togglefullscreen,mod_interactivevideo{{/str}}"><i class="bi bi-fullscreen"></i></span>
     </div>
 </div>
 </div>
